--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --watch ./src/index.js"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
   }
 }
